// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ProductGridPrice /> should render with msrp 1`] = `
<Component
  price={
    Object {
      "currency": "EUR",
      "discount": 52,
      "info": "PriceInfoString",
      "msrp": 22.95,
      "unitPrice": 10.95,
      "unitPriceMin": 10.95,
      "unitPriceStriked": 0,
    }
  }
>
  <ProductGridPrice
    price={
      Object {
        "currency": "EUR",
        "discount": 52,
        "info": "PriceInfoString",
        "msrp": 22.95,
        "unitPrice": 10.95,
        "unitPriceMin": 10.95,
        "unitPriceStriked": 0,
      }
    }
  >
    <Grid
      className="css-1glzrmu"
      wrap={true}
    >
      <Grid.Item
        grow={1}
      >
        <Price
          currency="EUR"
          discounted={true}
          unitPrice={10.95}
          unitPriceMin={10.95}
        />
      </Grid.Item>
      <Grid.Item>
        <PriceStriked
          className="css-nil"
          currency="EUR"
          value={22.95}
        />
      </Grid.Item>
    </Grid>
    <Grid>
      <Grid.Item>
        <PriceInfo
          className="css-1gftye4"
          text="PriceInfoString"
        />
      </Grid.Item>
    </Grid>
  </ProductGridPrice>
</Component>
`;

exports[`<ProductGridPrice /> should render with strike price 1`] = `
<Component
  price={
    Object {
      "currency": "EUR",
      "discount": 52,
      "info": "",
      "msrp": 0,
      "unitPrice": 10.95,
      "unitPriceMin": 10.95,
      "unitPriceStriked": 22.95,
    }
  }
>
  <ProductGridPrice
    price={
      Object {
        "currency": "EUR",
        "discount": 52,
        "info": "",
        "msrp": 0,
        "unitPrice": 10.95,
        "unitPriceMin": 10.95,
        "unitPriceStriked": 22.95,
      }
    }
  >
    <Grid
      className="css-1glzrmu"
      wrap={true}
    >
      <Grid.Item
        grow={1}
      >
        <Price
          currency="EUR"
          discounted={true}
          unitPrice={10.95}
          unitPriceMin={10.95}
        />
      </Grid.Item>
      <Grid.Item>
        <PriceStriked
          className="css-nil"
          currency="EUR"
          value={22.95}
        />
      </Grid.Item>
    </Grid>
  </ProductGridPrice>
</Component>
`;

exports[`<ProductGridPrice /> should render without discounts 1`] = `
<Component
  price={
    Object {
      "currency": "EUR",
      "discount": 0,
      "info": "PriceInfoString",
      "msrp": 0,
      "unitPrice": 22.95,
      "unitPriceMin": 22.95,
      "unitPriceStriked": 0,
    }
  }
>
  <ProductGridPrice
    price={
      Object {
        "currency": "EUR",
        "discount": 0,
        "info": "PriceInfoString",
        "msrp": 0,
        "unitPrice": 22.95,
        "unitPriceMin": 22.95,
        "unitPriceStriked": 0,
      }
    }
  >
    <Grid
      className="css-1glzrmu"
      wrap={true}
    >
      <Grid.Item
        grow={1}
      >
        <Price
          currency="EUR"
          discounted={false}
          unitPrice={22.95}
          unitPriceMin={22.95}
        />
      </Grid.Item>
    </Grid>
    <Grid>
      <Grid.Item>
        <PriceInfo
          className="css-1gftye4"
          text="PriceInfoString"
        />
      </Grid.Item>
    </Grid>
  </ProductGridPrice>
</Component>
`;
